src/_build/default/cparser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
file' -> . file [ # ]
## Transitions:
-- On INTEGER shift to state 1
-- On EOF shift to state 2
-- On type_specifier shift to state 3
-- On scalar_specifier shift to state 15
-- On function_definition shift to state 36
-- On function_declarator shift to state 37
-- On file shift to state 188
-- On external_declaration shift to state 189
-- On declaration_ptr_fun shift to state 178
-- On declaration shift to state 191
## Reductions:

State 1:
## Known stack suffix:
## INTEGER
## LR(1) items:
scalar_specifier -> INTEGER . [ STAR_CHR OPEN_PAREN_CHR IDENTIFIER COMMA_CHR CLOSE_PAREN_CHR ]
## Transitions:
## Reductions:
-- On STAR_CHR OPEN_PAREN_CHR IDENTIFIER COMMA_CHR CLOSE_PAREN_CHR
--   reduce production scalar_specifier -> INTEGER

State 2:
## Known stack suffix:
## EOF
## LR(1) items:
file -> EOF . [ # ]
## Transitions:
## Reductions:
-- On #
--   reduce production file -> EOF

State 3:
## Known stack suffix:
## type_specifier
## LR(1) items:
declaration -> type_specifier . declarator SEMI_CHR [ INTEGER EOF ]
declaration_ptr_fun -> type_specifier . OPEN_PAREN_CHR STAR_CHR identifier CLOSE_PAREN_CHR parameter_specifier [ SEMI_CHR ]
function_declarator -> type_specifier . identifier parameter_declarator [ OPEN_BRACE_CHR ]
scalar_specifier -> type_specifier . STAR_CHR [ STAR_CHR OPEN_PAREN_CHR IDENTIFIER ]
## Transitions:
-- On STAR_CHR shift to state 4
-- On OPEN_PAREN_CHR shift to state 5
-- On IDENTIFIER shift to state 7
-- On identifier shift to state 20
-- On declarator shift to state 34
## Reductions:

State 4:
## Known stack suffix:
## type_specifier STAR_CHR
## LR(1) items:
scalar_specifier -> type_specifier STAR_CHR . [ STAR_CHR OPEN_PAREN_CHR IDENTIFIER COMMA_CHR CLOSE_PAREN_CHR ]
## Transitions:
## Reductions:
-- On STAR_CHR OPEN_PAREN_CHR IDENTIFIER COMMA_CHR CLOSE_PAREN_CHR
--   reduce production scalar_specifier -> type_specifier STAR_CHR

State 5:
## Known stack suffix:
## type_specifier OPEN_PAREN_CHR
## LR(1) items:
declaration_ptr_fun -> type_specifier OPEN_PAREN_CHR . STAR_CHR identifier CLOSE_PAREN_CHR parameter_specifier [ SEMI_CHR COMMA_CHR CLOSE_PAREN_CHR ]
## Transitions:
-- On STAR_CHR shift to state 6
## Reductions:

State 6:
## Known stack suffix:
## type_specifier OPEN_PAREN_CHR STAR_CHR
## LR(1) items:
declaration_ptr_fun -> type_specifier OPEN_PAREN_CHR STAR_CHR . identifier CLOSE_PAREN_CHR parameter_specifier [ SEMI_CHR COMMA_CHR CLOSE_PAREN_CHR ]
## Transitions:
-- On IDENTIFIER shift to state 7
-- On identifier shift to state 8
## Reductions:

State 7:
## Known stack suffix:
## IDENTIFIER
## LR(1) items:
identifier -> IDENTIFIER . [ SUB_CHR STAR_CHR SEMI_CHR QUES_CHR OR_OP OPEN_PAREN_CHR OPEN_ANGLE_CHR NE_OP MOD_CHR LE_OP INC_OP GE_OP EQ_OP EQ_CHR DIV_CHR DEC_OP COMMA_CHR COLON_CHR CLOSE_PAREN_CHR CLOSE_ANGLE_CHR AND_OP ADD_CHR ]
## Transitions:
## Reductions:
-- On SUB_CHR STAR_CHR SEMI_CHR QUES_CHR OR_OP OPEN_PAREN_CHR OPEN_ANGLE_CHR NE_OP MOD_CHR LE_OP INC_OP GE_OP EQ_OP EQ_CHR DIV_CHR DEC_OP COMMA_CHR COLON_CHR CLOSE_PAREN_CHR CLOSE_ANGLE_CHR AND_OP ADD_CHR
--   reduce production identifier -> IDENTIFIER

State 8:
## Known stack suffix:
## type_specifier OPEN_PAREN_CHR STAR_CHR identifier
## LR(1) items:
declaration_ptr_fun -> type_specifier OPEN_PAREN_CHR STAR_CHR identifier . CLOSE_PAREN_CHR parameter_specifier [ SEMI_CHR COMMA_CHR CLOSE_PAREN_CHR ]
## Transitions:
-- On CLOSE_PAREN_CHR shift to state 9
## Reductions:

State 9:
## Known stack suffix:
## type_specifier OPEN_PAREN_CHR STAR_CHR identifier CLOSE_PAREN_CHR
## LR(1) items:
declaration_ptr_fun -> type_specifier OPEN_PAREN_CHR STAR_CHR identifier CLOSE_PAREN_CHR . parameter_specifier [ SEMI_CHR COMMA_CHR CLOSE_PAREN_CHR ]
## Transitions:
-- On OPEN_PAREN_CHR shift to state 10
-- On parameter_specifier shift to state 19
## Reductions:

State 10:
## Known stack suffix:
## OPEN_PAREN_CHR
## LR(1) items:
parameter_specifier -> OPEN_PAREN_CHR . CLOSE_PAREN_CHR [ SEMI_CHR COMMA_CHR CLOSE_PAREN_CHR ]
parameter_specifier -> OPEN_PAREN_CHR . parameter_specifier_list CLOSE_PAREN_CHR [ SEMI_CHR COMMA_CHR CLOSE_PAREN_CHR ]
## Transitions:
-- On INTEGER shift to state 1
-- On CLOSE_PAREN_CHR shift to state 11
-- On type_specifier_list shift to state 12
-- On type_specifier shift to state 16
-- On scalar_specifier shift to state 15
-- On parameter_specifier_list shift to state 17
## Reductions:

State 11:
## Known stack suffix:
## OPEN_PAREN_CHR CLOSE_PAREN_CHR
## LR(1) items:
parameter_specifier -> OPEN_PAREN_CHR CLOSE_PAREN_CHR . [ SEMI_CHR COMMA_CHR CLOSE_PAREN_CHR ]
## Transitions:
## Reductions:
-- On SEMI_CHR COMMA_CHR CLOSE_PAREN_CHR
--   reduce production parameter_specifier -> OPEN_PAREN_CHR CLOSE_PAREN_CHR

State 12:
## Known stack suffix:
## type_specifier_list
## LR(1) items:
parameter_specifier_list -> type_specifier_list . [ CLOSE_PAREN_CHR ]
type_specifier_list -> type_specifier_list . COMMA_CHR type_specifier [ COMMA_CHR CLOSE_PAREN_CHR ]
## Transitions:
-- On COMMA_CHR shift to state 13
## Reductions:
-- On CLOSE_PAREN_CHR
--   reduce production parameter_specifier_list -> type_specifier_list

State 13:
## Known stack suffix:
## type_specifier_list COMMA_CHR
## LR(1) items:
type_specifier_list -> type_specifier_list COMMA_CHR . type_specifier [ COMMA_CHR CLOSE_PAREN_CHR ]
## Transitions:
-- On INTEGER shift to state 1
-- On type_specifier shift to state 14
-- On scalar_specifier shift to state 15
## Reductions:

State 14:
## Known stack suffix:
## type_specifier_list COMMA_CHR type_specifier
## LR(1) items:
scalar_specifier -> type_specifier . STAR_CHR [ STAR_CHR COMMA_CHR CLOSE_PAREN_CHR ]
type_specifier_list -> type_specifier_list COMMA_CHR type_specifier . [ COMMA_CHR CLOSE_PAREN_CHR ]
## Transitions:
-- On STAR_CHR shift to state 4
## Reductions:
-- On COMMA_CHR CLOSE_PAREN_CHR
--   reduce production type_specifier_list -> type_specifier_list COMMA_CHR type_specifier

State 15:
## Known stack suffix:
## scalar_specifier
## LR(1) items:
type_specifier -> scalar_specifier . [ STAR_CHR OPEN_PAREN_CHR IDENTIFIER COMMA_CHR CLOSE_PAREN_CHR ]
## Transitions:
## Reductions:
-- On STAR_CHR OPEN_PAREN_CHR IDENTIFIER COMMA_CHR CLOSE_PAREN_CHR
--   reduce production type_specifier -> scalar_specifier

State 16:
## Known stack suffix:
## type_specifier
## LR(1) items:
scalar_specifier -> type_specifier . STAR_CHR [ STAR_CHR COMMA_CHR CLOSE_PAREN_CHR ]
type_specifier_list -> type_specifier . [ COMMA_CHR CLOSE_PAREN_CHR ]
## Transitions:
-- On STAR_CHR shift to state 4
## Reductions:
-- On COMMA_CHR CLOSE_PAREN_CHR
--   reduce production type_specifier_list -> type_specifier

State 17:
## Known stack suffix:
## OPEN_PAREN_CHR parameter_specifier_list
## LR(1) items:
parameter_specifier -> OPEN_PAREN_CHR parameter_specifier_list . CLOSE_PAREN_CHR [ SEMI_CHR COMMA_CHR CLOSE_PAREN_CHR ]
## Transitions:
-- On CLOSE_PAREN_CHR shift to state 18
## Reductions:

State 18:
## Known stack suffix:
## OPEN_PAREN_CHR parameter_specifier_list CLOSE_PAREN_CHR
## LR(1) items:
parameter_specifier -> OPEN_PAREN_CHR parameter_specifier_list CLOSE_PAREN_CHR . [ SEMI_CHR COMMA_CHR CLOSE_PAREN_CHR ]
## Transitions:
## Reductions:
-- On SEMI_CHR COMMA_CHR CLOSE_PAREN_CHR
--   reduce production parameter_specifier -> OPEN_PAREN_CHR parameter_specifier_list CLOSE_PAREN_CHR

State 19:
## Known stack suffix:
## type_specifier OPEN_PAREN_CHR STAR_CHR identifier CLOSE_PAREN_CHR parameter_specifier
## LR(1) items:
declaration_ptr_fun -> type_specifier OPEN_PAREN_CHR STAR_CHR identifier CLOSE_PAREN_CHR parameter_specifier . [ SEMI_CHR COMMA_CHR CLOSE_PAREN_CHR ]
## Transitions:
## Reductions:
-- On SEMI_CHR COMMA_CHR CLOSE_PAREN_CHR
--   reduce production declaration_ptr_fun -> type_specifier OPEN_PAREN_CHR STAR_CHR identifier CLOSE_PAREN_CHR parameter_specifier

State 20:
## Known stack suffix:
## type_specifier identifier
## LR(1) items:
declarator -> identifier . [ SEMI_CHR ]
function_declarator -> type_specifier identifier . parameter_declarator [ OPEN_BRACE_CHR ]
## Transitions:
-- On OPEN_PAREN_CHR shift to state 21
-- On parameter_declarator shift to state 33
## Reductions:
-- On SEMI_CHR
--   reduce production declarator -> identifier

State 21:
## Known stack suffix:
## OPEN_PAREN_CHR
## LR(1) items:
parameter_declarator -> OPEN_PAREN_CHR . CLOSE_PAREN_CHR [ OPEN_BRACE_CHR ]
parameter_declarator -> OPEN_PAREN_CHR . parameter_type_list CLOSE_PAREN_CHR [ OPEN_BRACE_CHR ]
## Transitions:
-- On INTEGER shift to state 1
-- On CLOSE_PAREN_CHR shift to state 22
-- On type_specifier shift to state 23
-- On scalar_specifier shift to state 15
-- On parameter_type_list shift to state 26
-- On parameter_list shift to state 28
-- On parameter_declaration shift to state 32
-- On declaration_ptr_fun shift to state 31
## Reductions:

State 22:
## Known stack suffix:
## OPEN_PAREN_CHR CLOSE_PAREN_CHR
## LR(1) items:
parameter_declarator -> OPEN_PAREN_CHR CLOSE_PAREN_CHR . [ OPEN_BRACE_CHR ]
## Transitions:
## Reductions:
-- On OPEN_BRACE_CHR
--   reduce production parameter_declarator -> OPEN_PAREN_CHR CLOSE_PAREN_CHR

State 23:
## Known stack suffix:
## type_specifier
## LR(1) items:
declaration_ptr_fun -> type_specifier . OPEN_PAREN_CHR STAR_CHR identifier CLOSE_PAREN_CHR parameter_specifier [ COMMA_CHR CLOSE_PAREN_CHR ]
parameter_declaration -> type_specifier . declarator [ COMMA_CHR CLOSE_PAREN_CHR ]
scalar_specifier -> type_specifier . STAR_CHR [ STAR_CHR OPEN_PAREN_CHR IDENTIFIER ]
## Transitions:
-- On STAR_CHR shift to state 4
-- On OPEN_PAREN_CHR shift to state 5
-- On IDENTIFIER shift to state 7
-- On identifier shift to state 24
-- On declarator shift to state 25
## Reductions:

State 24:
## Known stack suffix:
## identifier
## LR(1) items:
declarator -> identifier . [ SEMI_CHR COMMA_CHR CLOSE_PAREN_CHR ]
## Transitions:
## Reductions:
-- On SEMI_CHR COMMA_CHR CLOSE_PAREN_CHR
--   reduce production declarator -> identifier

State 25:
## Known stack suffix:
## type_specifier declarator
## LR(1) items:
parameter_declaration -> type_specifier declarator . [ COMMA_CHR CLOSE_PAREN_CHR ]
## Transitions:
## Reductions:
-- On COMMA_CHR CLOSE_PAREN_CHR
--   reduce production parameter_declaration -> type_specifier declarator

State 26:
## Known stack suffix:
## OPEN_PAREN_CHR parameter_type_list
## LR(1) items:
parameter_declarator -> OPEN_PAREN_CHR parameter_type_list . CLOSE_PAREN_CHR [ OPEN_BRACE_CHR ]
## Transitions:
-- On CLOSE_PAREN_CHR shift to state 27
## Reductions:

State 27:
## Known stack suffix:
## OPEN_PAREN_CHR parameter_type_list CLOSE_PAREN_CHR
## LR(1) items:
parameter_declarator -> OPEN_PAREN_CHR parameter_type_list CLOSE_PAREN_CHR . [ OPEN_BRACE_CHR ]
## Transitions:
## Reductions:
-- On OPEN_BRACE_CHR
--   reduce production parameter_declarator -> OPEN_PAREN_CHR parameter_type_list CLOSE_PAREN_CHR

State 28:
## Known stack suffix:
## parameter_list
## LR(1) items:
parameter_list -> parameter_list . COMMA_CHR parameter_declaration [ COMMA_CHR CLOSE_PAREN_CHR ]
parameter_type_list -> parameter_list . [ CLOSE_PAREN_CHR ]
## Transitions:
-- On COMMA_CHR shift to state 29
## Reductions:
-- On CLOSE_PAREN_CHR
--   reduce production parameter_type_list -> parameter_list

State 29:
## Known stack suffix:
## parameter_list COMMA_CHR
## LR(1) items:
parameter_list -> parameter_list COMMA_CHR . parameter_declaration [ COMMA_CHR CLOSE_PAREN_CHR ]
## Transitions:
-- On INTEGER shift to state 1
-- On type_specifier shift to state 23
-- On scalar_specifier shift to state 15
-- On parameter_declaration shift to state 30
-- On declaration_ptr_fun shift to state 31
## Reductions:

State 30:
## Known stack suffix:
## parameter_list COMMA_CHR parameter_declaration
## LR(1) items:
parameter_list -> parameter_list COMMA_CHR parameter_declaration . [ COMMA_CHR CLOSE_PAREN_CHR ]
## Transitions:
## Reductions:
-- On COMMA_CHR CLOSE_PAREN_CHR
--   reduce production parameter_list -> parameter_list COMMA_CHR parameter_declaration

State 31:
## Known stack suffix:
## declaration_ptr_fun
## LR(1) items:
parameter_declaration -> declaration_ptr_fun . [ COMMA_CHR CLOSE_PAREN_CHR ]
## Transitions:
## Reductions:
-- On COMMA_CHR CLOSE_PAREN_CHR
--   reduce production parameter_declaration -> declaration_ptr_fun

State 32:
## Known stack suffix:
## parameter_declaration
## LR(1) items:
parameter_list -> parameter_declaration . [ COMMA_CHR CLOSE_PAREN_CHR ]
## Transitions:
## Reductions:
-- On COMMA_CHR CLOSE_PAREN_CHR
--   reduce production parameter_list -> parameter_declaration

State 33:
## Known stack suffix:
## type_specifier identifier parameter_declarator
## LR(1) items:
function_declarator -> type_specifier identifier parameter_declarator . [ OPEN_BRACE_CHR ]
## Transitions:
## Reductions:
-- On OPEN_BRACE_CHR
--   reduce production function_declarator -> type_specifier identifier parameter_declarator

State 34:
## Known stack suffix:
## type_specifier declarator
## LR(1) items:
declaration -> type_specifier declarator . SEMI_CHR [ WHILE TILDE_CHR SUB_CHR STRING_LITERAL STAR_CHR SEMI_CHR RETURN OPEN_PAREN_CHR OPEN_BRACE_CHR INTEGER INC_OP IF IDENTIFIER FOR EOF DEC_OP CONSTANT CLOSE_BRACE_CHR BANG_CHR AMP_CHR ADD_CHR ]
## Transitions:
-- On SEMI_CHR shift to state 35
## Reductions:

State 35:
## Known stack suffix:
## type_specifier declarator SEMI_CHR
## LR(1) items:
declaration -> type_specifier declarator SEMI_CHR . [ WHILE TILDE_CHR SUB_CHR STRING_LITERAL STAR_CHR SEMI_CHR RETURN OPEN_PAREN_CHR OPEN_BRACE_CHR INTEGER INC_OP IF IDENTIFIER FOR EOF DEC_OP CONSTANT CLOSE_BRACE_CHR BANG_CHR AMP_CHR ADD_CHR ]
## Transitions:
## Reductions:
-- On WHILE TILDE_CHR SUB_CHR STRING_LITERAL STAR_CHR SEMI_CHR RETURN OPEN_PAREN_CHR OPEN_BRACE_CHR INTEGER INC_OP IF IDENTIFIER FOR EOF DEC_OP CONSTANT CLOSE_BRACE_CHR BANG_CHR AMP_CHR ADD_CHR
--   reduce production declaration -> type_specifier declarator SEMI_CHR

State 36:
## Known stack suffix:
## function_definition
## LR(1) items:
external_declaration -> function_definition . [ INTEGER EOF ]
## Transitions:
## Reductions:
-- On INTEGER EOF
--   reduce production external_declaration -> function_definition
